--- a/src/components/common/QuizComponent/styles.scss
+++ b/src/components/common/QuizComponent/styles.scss
@@ -1,11 +1,10 @@
 .main-container {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
+  padding: 10px 30px;
+  flex-grow: 1;
+  background-color: #212121;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #212121;
 }
 
 .progress-bar {
