--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,7 +10,9 @@ body {
 }
 
 .app-container {
+  position: fixed;
   display: flex;
-  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
 }
 
