--- a/src/components/layout/Sidebar/styles.scss
+++ b/src/components/layout/Sidebar/styles.scss
@@ -4,7 +4,21 @@
   flex-direction: column;
   gap: 20px;
   background: #171717;
-  padding: 50px 40px 0 20px;
+  padding: 20px 40px 0 20px;
+
+  &-logo {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 40px;
+
+
+    h1 {
+      color: #e0e0e0;
+      font-size: 20px;
+    }
+  }
 
   button {
     text-align: start;
