--- a/src/components/layout/Sidebar/styles.scss
+++ b/src/components/layout/Sidebar/styles.scss
@@ -24,11 +24,11 @@
     text-align: start;
     padding: 10px 40px 10px 10px;
     font-size: 18px;
-    color: #e0e0e0; // Цвет текста, чтобы сочетался с общей темой
+    color: #e0e0e0;
     background: transparent;
-    border: 1px solid #c2b7b7; // Граница, чтобы соответствовать стилю input
+    border: 1px solid #c2b7b7;
     border-radius: 5px;
-    outline: none; // Убираем контур при фокусе
+    outline: none;
     cursor: pointer;
   }
 }
