--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,9 +11,9 @@ body {
 }
 
 .app-container {
-  position: fixed;
+  //position: fixed;
   display: flex;
-  height: 100vh;
-  width: 100vw;
+  //height: 100vh;
+  //width: 100vw;
 }
 
